--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     }
 ],
  
- "start_url":"/VirtualSPM/index.html",
+ "start_url":"https://virtualsp/VirtualSPM/index.html",
   "display": "browser",
   "orientation": "portrait"
 }
